2010-06-14  Lluis Sanchez Gual  <lluis@novell.com>

	* configure: Bump MD version.

2010-05-20  Lluis Sanchez Gual  <lluis@novell.com>

	* configure: Bump MD version.

2010-03-22  Lluis Sanchez Gual  <lluis@novell.com>

	* configure:
	* AssemblyInfo.cs:
	* AspNetEdit.addin.xml: Bumped MD version.

2010-03-17  Lluis Sanchez Gual  <lluis@novell.com>

	* AspNetEdit.csproj: Flush.

2010-03-17  Lluis Sanchez Gual  <lluis@novell.com>

	* AspNetEdit.addin.xml:
	* AspNetEdit.Editor/EditorHost.cs:
	* AspNetEdit.Integration/GeckoWebBrowser.cs:
	* AspNetEdit.Integration/MonoDevelopProxy.cs:
	* AspNetEdit.Integration/AspNetEditViewContent.cs: Merged
	  MD.Projects into MD.Core, and MD.Projects.Gui, MD.Core.Gui
	  and MD.Components into MD.Ide.

2010-03-01  Lluis Sanchez Gual  <lluis@novell.com>

	* AspNetEdit.sln: The invariant policy can't be used anymore
	  as base policy set.

2009-10-30  Lluis Sanchez Gual  <lluis@novell.com>

	* configure:
	* AssemblyInfo.cs:
	* AspNetEdit.addin.xml: Bump MD version.

2009-10-07  Lluis Sanchez Gual  <lluis@novell.com>

	* configure:
	* AssemblyInfo.cs:
	* AspNetEdit.addin.xml: Bump MD version.

2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>

	* configure: We now depend on gtk# 2.12.8, Mono 2.4, and
	  Mono.Addins 0.4.

2009-07-28  Michael Hutchinson  <mhutchinson@novell.com>

	* AspNetEdit.Editor.UI/PropertyGrid.cs:
	* AspNetEdit.Integration/AspNetEditViewContent.cs: Track
	  PropertyGrid namespace move.

2009-06-23  Michael Hutchinson  <mhutchinson@novell.com>

	* AspNetEdit.Integration/AspNetEditViewContent.cs: Fix build.

2009-06-23  Lluis Sanchez Gual  <lluis@novell.com>

	* AspNetEdit.Integration/AspNetEditViewContent.cs: Use the new
	  DesktopService instead of PlatformService.

2009-05-19  Lluis Sanchez Gual  <lluis@novell.com>

	* AspNetEdit.csproj: Flush.

2009-04-15  Lluis Sanchez Gual  <lluis@novell.com>

	* configure:
	* AssemblyInfo.cs:
	* AspNetEdit.addin.xml: Bump MD version.
