@@ -1,3 +1,8 @@
+2010-07-12  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* AspNetEdit.Integration/AspNetEditViewContent.cs: Track
+	  ProjectDomService/Parser API.
+
 2010-06-14  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* configure: Bump MD version.
